# drf-api-deploy

./: .gitignore  heroku.yml  heroky.yml  pyproject.toml  requirements.txt
snacks_project/: .env  settings.py
